# django-netcast

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
netcast/: __init__.py  apps.py  network.py
netcast/management/commands/: share_local.py
tests/: settings.py  test_command.py  test_network.py
